--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
     <string name="title_status_up">@android:string/ok</string>
     <string name="title_status_down">DOWN</string>
     <string name="title_ping_time">Last Ping (year-month-day)</string>
-    <string name="title_next_run_time">Next Expected Run Time</string>
+    <string name="title_next_run_time">Next Run Time</string>
     <string name="title_about">About</string>
 </resources>
