--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="title_ping_time">Last Ping (year-month-day)</string>
     <string name="title_next_run_time">Next Run Time</string>
     <string name="title_about">About</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_notifications_success">Notify of Successful Runs</string>
 </resources>
