fixed bugs, updated styles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="format_cron_failure">Cron Job Failed: \"%s\"</string>
     <string name="format_cron_success_msg">Your CRON job, \"%1$s\", pinged CronHub\'s servers at %2$s.</string>
     <string name="format_cron_failure_msg">Your CRON job, \"%1$S\", has not pinged CronHub\'s servers within %2$s minutes of its scheduled execution.</string>
+    <string name="error_none">[none]</string>
 </resources>
